navbar area complete

--- a/index.html
+++ b/index.html
@@ -3,11 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game zone website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <title>Game zone website</title>
 </head>
 <body>
-    
+    <!-- navbar area -->
+    <div class="navbar container">
+        <div class="navbar-first">
+            <div class="img">
+                <img src="./images/Frame.png" alt="">
+            </div>
+            <div class="navbar-first-text">
+                <h3><span>G</span>amer</h3>
+            </div>
+        </div>
+        <div class="navbar-second">
+            <ul>
+                <li>About us</li>
+                <li>Developers</li>
+                <li class="follow">Follow us   <i class="fa-brands fa-youtube"></i>   <i class="fa-brands fa-tiktok"></i></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
