--- a/index.html
+++ b/index.html
@@ -23,9 +23,98 @@
             <ul>
                 <li>About us</li>
                 <li>Developers</li>
-                <li class="follow">Follow us   <i class="fa-brands fa-youtube"></i>   <i class="fa-brands fa-tiktok"></i></li>
+                <li class="follow">Follow us   <i class="fa-brands color fa-youtube"></i>   <i class="fa-brands fa-tiktok"></i></li>
             </ul>
         </div>
     </div>
+
+    <!-- header area start -->
+    
+    <section class="header">
+        <div class="header-container container">
+            <div class="header-left" style="position: relative">
+                <h2>PLAY LIKE THE</h2>
+                <h1 class="goat">G.O.A.T</h1>
+                <h1 class="goat goat-overlay" style="position: absolute; top: 18%;">G.O.A.T</h1>
+                <h3><i class="fa-regular fa-circle-play"></i> 1-Click instant play</h3>
+                <h3><i class="fa-solid fa-download"></i> No Download</h3>
+                <h3><i class="fa-solid fa-user-group"></i> 1000s of supported online games</h3>
+                <button class="btn-1">SIGN IN</button>
+                <button class="btn-2">GO ROGUE</button>
+            </div>
+            <div class="header-right">
+                <img src="./images/Group 18.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <!-- gamer area start -->
+
+    <section class="gamer">
+        <div class="gamer-header container">
+            <div class="gamer-left">
+                <img src="./images/pngwing 4.png" alt="">
+            </div>
+            <div class="gamer-right">
+                <h1 class="goat">We are gamer</h1>
+                <p>An international digital games and entertainment 
+                company. We develop, publish and distribute multiplayer 
+                mobile games. We reach over 400 million players each 
+                month and our audience keeps growing.</p>
+                <button class="btn-2">KNOW MORE</button>
+                <h3>Our purpose...</h3>
+                <h2>“unleash the gamer in everyone"</h2>
+            </div>
+        </div>
+    </section>
+
+    <!-- video area start -->
+    
+    <section class="video container">
+        <h1>Online Games <span class="goat-1">Funny Videos</span></h1>
+        <h2>A Collection of Hilarious Videos to Brighten Your Day</h2>
+
+        <div class="card">
+            <div class="card-details">
+                <img src="./images/Rectangle 4.png" alt="">
+                <div class="watch-now">
+                    <span><i class="fa-regular fa-circle-play"></i></span>
+                    <p>Watch now</p>
+                </div>
+                <div class="text">No Download. No Installs. Play 
+                games Instantly on Gamer.</div>
+            </div>
+
+            <div class="card-details">
+                <img src="./images/Rectangle 5.png" alt="">
+                <div class="watch-now">
+                    <span><i class="fa-regular fa-circle-play"></i></span>
+                    <p>Watch now</p>
+                </div>
+                <div class="text">Did you score? #unblocked games 
+                    #school</div>
+            </div>
+
+            <div class="card-details">
+                <img src="./images/Rectangle 7.png" alt="">
+                <div class="watch-now">
+                    <span><i class="fa-regular fa-circle-play"></i></span>
+                    <p>Watch now</p>
+                </div>
+                <div class="text">Breaking game records <br>
+                like OG</div>
+            </div>
+
+            <div class="card-details">
+                <img src="./images/Rectangle 6.png" alt="">
+                <div class="watch-now">
+                    <span><i class="fa-regular fa-circle-play"></i></span>
+                    <p>Watch now</p>
+                </div>
+                <div class="text">Busted gaming on school laptop, 
+                    but you are still lit.</div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
