--- a/index.html
+++ b/index.html
@@ -116,5 +116,22 @@
             </div>
         </div>
     </section>
+
+    <!-- play area start -->
+
+    <section class="play container">
+        <div class="play-left">
+            <h1 class="goat-1">Play Instantly,</h1>
+            <h2>No Downloads</h2>
+            <h2>No Installs.</h2>
+            <p>Play games online for free without <br>
+                downloading. Just click the Play button<br> 
+                and play instantly in your browser</p>
+        </div>
+        <div class="play-right">
+            <img src="./images/Rectangle 55.png" alt="">
+            <img class="img" src="./images/Rectangle 66.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
