categoty area complete

--- a/index.html
+++ b/index.html
@@ -133,5 +133,107 @@
             <img class="img" src="./images/Rectangle 66.png" alt="">
         </div>
     </section>
+
+    <!-- play game area start -->
+
+    <section class="play-game container">
+        <div class="play-game-right">
+            <img src="./images/Rectangle 67.png" alt="">
+            <img class="img" src="./images/Rectangle 78.png" alt="">
+        </div>
+        <div class="play-game-left">
+            <h1><span class="goat-1">Play Games <br>
+                Online</span> Anywhere, <br>
+                Anytime</h1>
+                <p>PC. dad s phone, moms tablet, or your Chromebook, 
+                    with Gamer you can play your favorite games online 
+                    for free, any time, anywhere , on any device</p>
+        </div>
+    </section>
+
+    <!-- category area start -->
+
+    <section class="category container">
+        <div class="category-area">
+            <div class="category-img">
+                <img src="./images/Rectangle 11.png" alt="">
+            </div>
+            <div class="category-text">
+                <p>Action Games</p>
+            </div>
+        </div>
+
+        <div class="category-area">
+            <div class="category-img">
+                <img src="./images/Rectangle 12.png" alt="">
+            </div>
+            <div class="category-text">
+                <p>Adventure Games</p>
+            </div>
+        </div>
+
+        <div class="category-area">
+            <div class="category-img">
+                <img src="./images/Rectangle 13.png" alt="">
+            </div>
+            <div class="category-text">
+                <p>Arcade Games</p>
+            </div>
+        </div>
+
+        <div class="category-area">
+            <div class="category-img">
+                <img src="./images/Rectangle 14.png" alt="">
+            </div>
+            <div class="category-text">
+                <p>Educational Games</p>
+            </div>
+        </div>
+
+        <div class="category-area">
+            <div class="category-img">
+                <img src="./images/Rectangle 15.png" alt="">
+            </div>
+            <div class="category-text">
+                <p>Word Games</p>
+            </div>
+        </div>
+
+        <div class="category-area">
+            <div class="category-img">
+                <img src="./images/Rectangle 16.png" alt="">
+            </div>
+            <div class="category-text">
+                <p>Role Palying Games</p>
+            </div>
+        </div>
+
+        <div class="category-area">
+            <div class="category-img">
+                <img src="./images/Rectangle 17.png" alt="">
+            </div>
+            <div class="category-text">
+                <p>Music & Audio Games</p>
+            </div>
+        </div>
+
+        <div class="category-area">
+            <div class="category-img">
+                <img src="./images/Rectangle 18.png" alt="">
+            </div>
+            <div class="category-text">
+                <p>Puzzle Games</p>
+            </div>
+        </div>
+
+        <div class="category-area">
+            <div class="category-img">
+                <img src="./images/Rectangle 19.png" alt="">
+            </div>
+            <div class="category-text">
+                <p>Strategy Games</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
