--- a/index.html
+++ b/index.html
@@ -235,5 +235,49 @@
             </div>
         </div>
     </section>
+
+    <!-- footer area start -->
+
+    <footer class="footer">
+        <div class="footer-container container">
+            <div class="footer-first">
+                <div class="img">
+                    <img src="./images/Frame.png" alt="">
+                </div>
+                <div class="footer-first-text">
+                    <h3><span>G</span>amer</h3>
+                </div>
+            </div>
+
+            <div class="footer-second-text">
+                <h4>Our story</h4>
+                <h4>Games</h4>
+                <h4>Web games</h4>
+                <h4>Careers</h4>
+                <h4>Support</h4>
+                <h4>My Account</h4>
+            </div>
+
+            <div class="footer-social-icon">
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-apple"></i>
+            </div>
+
+            <div class="footer-third-text">
+                <h3>Terms and condition</h3>
+                <h3>Privacy policy</h3>
+                <h3>Cookie Policy</h3>
+                <h3>Privacy Setting</h3>
+            </div>
+
+            <div class="footer-last">
+                <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
